--- a/index.ipynb
+++ b/index.ipynb
@@ -49,11 +49,11 @@
     "number_50 = 50\n",
     "less_than_50 = None\n",
     "if number_50 > 100:\n",
-    "    # if number_50 is greater than 100, assign the `less_than_50` variable to the number 100\n",
+    "    print (less_than_50) # if number_50 is greater than 100, assign the `less_than_50` variable to the number 100\n",
     "elif number_50 < 50:\n",
-    "    # if number_50 is greater than 50, assign the `less_than_50` variable to the number 50\n",
+    "    print (less_than_50) # if number_50 is greater than 50, assign the `less_than_50` variable to the number 50\n",
     "else:\n",
-    "    # else assign the `less_than_50` variable to 49"
+    "    print (less_than_50) # else assign the `less_than_50` variable to 49"
    ]
   },
   {
@@ -143,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
